--- a/Admin-page/css/main.css
+++ b/Admin-page/css/main.css
@@ -14,26 +14,38 @@ i {
 }
 
 .main-nav {
-  width: 130px;
+  width: 180px;
   background-color: rgb(65, 70, 181);
   z-index: 1;
   display: flex;
   flex-direction: column;
-  transform: translateX(-90px);
-  transition: all 1s;
   position: fixed;
   height: 100vh;
+  padding: 10px 30px;
+
+  transition: all 0.7s;
+  transform: translateX(-140px);
 }
 
 .main-nav:hover {
   transform: translateX(0);
 }
 
+.main-nav:hover i {
+  transform: translateX(0);
+  margin-right: 5px;
+}
+
+.main-nav li {
+  color: #fff;
+}
+
 .main-nav i {
-  transform: translateX(45px);
   color: #fff;
   margin: 0 auto;
   margin-top: 30px;
+  transform: translateX(120px);
+  transition: all 0.8s;
 }
 
 header {
@@ -289,7 +301,7 @@ button {
 
 .task {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-content: center;
   background: #fff;
   padding: 20px;
